--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,14 +2,45 @@
     <meta charset="utf-8">
     <link crossorigin="anonymous" media="all"
         rel="stylesheet"
-        href="{{ "css/frameworks.css" | absURL }}" />
+        href='{{ printf "%s?%s" ("css/frameworks.css" | absURL) (now.Format "20060102150405") }}' />
     <link crossorigin="anonymous" media="all"
-        rel="stylesheet" href="{{ "css/github.css" | absURL }}" />
+        rel="stylesheet" href='{{ printf "%s?%s" ("css/github.css" | absURL) (now.Format "20060102150405") }}' />
+    <link crossorigin="anonymous" media="all"
+        rel="stylesheet" href='{{ printf "%s?%s" ("css/user.css" | absURL) (now.Format "20060102150405") }}'/>
     <meta name="viewport" content="width=device-width">
-
     <title>{{ if .IsHome }}{{ else }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
-
-    <link rel="icon" type="image/x-icon" class="js-site-favicon" href="{{ "images/favicon.ico" | absURL }}">
+<!-- OGP -->
+    <meta property="og:url" content="{{ .URL | absURL }}"/>
+    <meta property="og:site_name" content="{{ .Site.Title }}"/>
+    {{- if .IsHome }}
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="{{ .Site.Title }}" />
+    <meta property="og:description" content="{{ .Site.Params.Description }}"/>
+    <meta property="og:image" content="{{ $.Site.Params.avatar }}"/>
+    <meta name="description" content="{{ .Site.Params.Description }}"/>
+    {{- else }}
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="{{ .Title }}" />
+    <meta property="og:description" content="{{ .Params.Description }}"/>
+    <meta name="description" content="{{ .Params.Description }}"/>
+    {{- with .Params.Keyword }}
+    <meta name="keywords" content="{{ . }}"/>
+    {{- end }}
+    {{- end }}
+    <link rel="icon" type="image/x-icon" class="js-site-favicon" href='{{ "/favicon.ico" | absURL }}'>
+    <link rel="shortcut icon" href='{{ "/favicon.ico" | absURL }}'/>
     <meta name="theme-color" content="#1e2327">
-    {{ template "_internal/google_analytics_async.html" . }}
+
+    {{- if not .Site.IsServer }}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.GoogleAnalytics }}"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', '{{ .Site.GoogleAnalytics }}');
+    </script>
+<!-- {{ template "_internal/google_analytics_async.html" . }} -->
+    {{- end }}
 </head>
