--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -1,10 +1,46 @@
-<!-- layouts/partials/tags.html -->
+{{ $mainSections := .Site.Params.mainSections | default (slice "post") }}
+{{ $section := where .Site.RegularPages "Section" "in" $mainSections }}
+{{ $section_count := len $section }}
+{{ $n_posts := $.Param "recent_posts_number" | default 6 }}
+{{ $paginator := .Paginate (where .Pages "Type" "tags").ByTitle }}
+<div class="col-lg-9 col-md-8 col-12 float-md-left pl-md-2">
+    {{- partial "menu.html" . }}
 
-{{ $taxonomy := "tags" }}
-{{ with .Param $taxonomy }}
-    {{ range $index, $tag := . }}
-      {{ with $.Site.GetPage (printf "/%s/%s" $taxonomy $tag) -}}
-          <a href="{{ .Permalink }}">{{ $tag | urlize }}</a>
-      {{- end -}}
-    {{- end -}}
-{{ end }}
+    <div class="position-relative">
+        <div id="user-repositories-list">
+            <ul data-filterable-for="your-repos-filter" data-filterable-type="substring">
+                {{ range $paginator.Pages }}
+                <li class="col-12 d-flex width-full py-4 border-bottom public fork">
+                    <div class="col-12 col-lg-12 d-inline-block">
+                        <div class="d-inline-block mb-1">
+                            <h3>
+                                <a href="/tags/{{ .Title | urlize }}">{{ .Title }}</a>
+                                <span class="Counter">
+                                    {{ len .Pages }}
+                                </span>
+                            </h3>
+                        </div>
+                    </div>
+                </li>
+                {{ end }}
+            </ul>
+            {{ if gt $paginator.TotalPages 1}}
+            <div class="paginate-container">
+                <div class="BtnGroup" data-test-selector="pagination">
+                    {{ if $paginator.HasPrev }}
+                    <a rel="nofollow" class="btn btn-outline BtnGroup-item"
+                        href="{{ $paginator.Prev.URL }}">Previous</a>
+                    {{ else }}
+                    <button class="btn btn-outline BtnGroup-item" disabled="disabled">Previous</button>
+                    {{ end }}
+                    {{ if $paginator.HasNext }}
+                    <a rel="nofollow" class="btn btn-outline BtnGroup-item" href="{{ $paginator.Next.URL }}">Next</a>
+                    {{ else }}
+                    <button class="btn btn-outline BtnGroup-item" disabled="disabled">Next</button>
+                    {{ end }}
+                </div>
+            </div>
+            {{ end }}
+        </div>
+    </div>
+</div>
