--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,6 +5,8 @@
         href="{{ "css/frameworks.css" | absURL }}" />
     <link crossorigin="anonymous" media="all"
         rel="stylesheet" href="{{ "css/github.css" | absURL }}" />
+    <link crossorigin="anonymous" media="(prefers-color-scheme: dark)"
+        rel="stylesheet" href="{{ "css/dark.css" | absURL }}" />
     <meta name="viewport" content="width=device-width">
 
     <title>{{ if .IsHome }}{{ else }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
