--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -11,7 +11,7 @@
             <a aria-current="page" class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ .Site.BaseURL }}">
                 Overview
             </a>
-            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected" href="{{ absURL "posts/" }}">
+            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected" href="{{ absURL "post/" }}">
                 Posts
                 <span class="Counter hide-lg hide-md hide-sm">
                     {{ $section_count}}
@@ -35,7 +35,7 @@
                             </h3>
                         </div>
 
-                        <div name="posts-post">
+                        <div name="posts-post" class="text-gray mb-2 pr-4">
                             {{ .Summary | safeHTML }}
                         </div>
 
