--- a/layouts/partials/overview.html
+++ b/layouts/partials/overview.html
@@ -8,7 +8,7 @@
             <a aria-current="page" class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected " href="{{ .Site.BaseURL }}">
                 Overview
             </a>
-            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ absURL "post/" }}">
+            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ absURL "posts/" }}">
                 Posts
                 <span class="Counter hide-lg hide-md hide-sm">
                     {{ $section_count}}
