delete follow button and typo fix

--- a/layouts/partials/overview.html
+++ b/layouts/partials/overview.html
@@ -96,7 +96,7 @@
                         {{ $count = add $count 1 }}
                         {{ end }}
                         {{ end }}
-                        {{ $count }} contributions in the last year
+                        {{ $count }} posts in the last year
                     </h2>
                     <div class="js-profile-timeline-year-list">
                         <a href="?tab=overview&from=from&to=to" class="js-year-link selected"></a>
