bug fix & update Post activity

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -7,7 +7,7 @@
         style="visibility: hidden; display: none; height: 56px;"></div>
     <div class="UnderlineNav width-full user-profile-nav js-sticky top-0"
         style="position: static; top: 0px; left: 330.5px; width: 911.5px;">
-        <nav class="UnderlineNav-body" data-pjax aria-label="User profile">
+        <nav class="UnderlineNav-body" aria-label="User profile">
             <a aria-current="page" class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ .Site.BaseURL }}">
                 Overview
             </a>
