--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 <div class="application-main " data-commit-hovercards-enabled>
-    <main id="js-pjax-container" data-pjax-container>
+    <main>
         <div class="container-xl clearfix px-3 mt-4">
 
             {{ partial "user-profile.html" . }}
