--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -6,17 +6,14 @@
                     <div class="mb-3 d-flex">
                         <h1 class="public css-truncate float-none flex-auto width-fit pl-0">
                             <a class="avatar mr-1" href="{{ absURL "about/" }}">
-                            {{ with $.Site.Params.avatar }}
+                                {{ with $.Site.Params.avatar }}
 
-                                <img
-                                    src="{{  $.Site.Params.avatar  }}" width="26" height="26">
-                            {{ else }}
-                                <img
-                                    src="{{ "images/avatar.png" | absURL }}" width="26" height="26">
-                            {{ end }}
+                                <img src="{{  $.Site.Params.avatar  }}" width="26" height="26">
+                                {{ else }}
+                                <img src="{{ "images/avatar.png" | absURL }}" width="26" height="26">
+                                {{ end }}
                             </a>
-                            <span class="author"><a
-                                    href="{{ .Site.BaseURL }}">{{ .Site.Params.author }}</a></span>
+                            <span class="author"><a href="{{ .Site.BaseURL }}">{{ .Site.Params.author }}</a></span>
                             <span class="path-divider">/</span>
                             <strong itemprop="name" class="css-truncate-target" style="max-width: 410px"><a
                                     href="{{ .Permalink }}">{{ .Title }}</a></strong>
@@ -26,7 +23,7 @@
                                     title="Created at {{ .PublishDate.Format "2006/01/02" }}">
                                     {{ .PublishDate.Format "2006-01-02" }}</time-ago>
                                 <span class="file-info-divider"></span>
-                                Modifyed <time-ago datetime="{{ .Lastmod.Format "2006-01-02" }}" class="no-wrap"
+                                Modified <time-ago datetime="{{ .Lastmod.Format "2006-01-02" }}" class="no-wrap"
                                     title="Modified  at {{ .Lastmod.Format "2006/01/02" }}">
                                     {{ .Lastmod.Format "2006-01-02" }}</time-ago>
                             </div>
@@ -70,17 +67,17 @@
         async>
 </script> -->
 <script>
-	var systemThemeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)');
-	var systemTheme = systemThemeMediaQuery.matches ? 'dark' : 'light';
-	var utterancesTheme = systemTheme === 'dark' ? 'github-dark' : 'github-light';
-	var utterancesScript = document.createElement('script');
-	utterancesScript.src = 'https://utteranc.es/client.js';
-	utterancesScript.setAttribute('repo', '{{ .Site.Params.utterances }}');
-	utterancesScript.setAttribute('issue-term', 'title');
-	utterancesScript.setAttribute('theme', utterancesTheme);
-	utterancesScript.setAttribute('crossorigin', 'anonymous');
-	utterancesScript.setAttribute('async', '');
-	document.querySelector('.utterances').appendChild(utterancesScript);
+    var systemThemeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)');
+    var systemTheme = systemThemeMediaQuery.matches ? 'dark' : 'light';
+    var utterancesTheme = systemTheme === 'dark' ? 'github-dark' : 'github-light';
+    var utterancesScript = document.createElement('script');
+    utterancesScript.src = 'https://utteranc.es/client.js';
+    utterancesScript.setAttribute('repo', '{{ .Site.Params.utterances }}');
+    utterancesScript.setAttribute('issue-term', 'title');
+    utterancesScript.setAttribute('theme', utterancesTheme);
+    utterancesScript.setAttribute('crossorigin', 'anonymous');
+    utterancesScript.setAttribute('async', '');
+    document.querySelector('.utterances').appendChild(utterancesScript);
 </script>
 <noscript>Please enable JavaScript to view the comments</noscript>
 {{ end }}
